# GEACS-script-sei-gerar-e-enviar-monitoramento-cronograma

./: .env  .gitignore  pyproject.toml  status.txt
dados/dl/geral/: dl_completo-20260611.csv  monitoramento-2026_06_11.xlsx  remessas_em_cadastramento-dl-2026_06_11.xlsx  remessas_pag_processado_zeradas-dl-2026_06_11.xlsx
dados/dl/regionais/: AGREGADO-remessas-dl-ALFENAS-2026_06_11.xlsx  AGREGADO-remessas-dl-ALMENARA-2026_06_11.xlsx  AGREGADO-remessas-dl-ARAXA-2026_06_11.xlsx  AGREGADO-remessas-dl-BARBACENA-2026_06_11.xlsx  AGREGADO-remessas-dl-BELO HORIZONTE-2026_06_11.xlsx  AGREGADO-remessas-dl-BOM DESPACHO-2026_06_11.xlsx  AGREGADO-remessas-dl-CONSELHEIRO LAFAIETE-2026_06_11.xlsx  AGREGADO-remessas-dl-CONTAGEM-2026_06_11.xlsx  AGREGADO-remessas-dl-CORONEL FABRICIANO-2026_06_11.xlsx  AGREGADO-remessas-dl-CURVELO-2026_06_11.xlsx  AGREGADO-remessas-dl-GOVERNADOR VALADARES-2026_06_11.xlsx  AGREGADO-remessas-dl-ITABIRA-2026_06_11.xlsx  AGREGADO-remessas-dl-ITUIUTABA-2026_06_11.xlsx  AGREGADO-remessas-dl-JUIZ DE FORA-2026_06_11.xlsx  AGREGADO-remessas-dl-MANHUAÇU-2026_06_11.xlsx  AGREGADO-remessas-dl-MONTES CLAROS-2026_06_11.xlsx  AGREGADO-remessas-dl-OLIVEIRA-2026_06_11.xlsx  AGREGADO-remessas-dl-PARACATU-2026_06_11.xlsx  (+12 more)
dados/geral/: monitoramento-2026_06_09.xlsx  remessas_em_cadastramento-2026_06_09.xlsx  remessas_pag_processado_zeradas-2026_06_09.xlsx
dados/inputs/: Contatos Regionais.xlsx
dados/regionais/: remessas-ALFENAS-2026_06_09.xlsx  remessas-ALMENARA-2026_06_09.xlsx  remessas-ARAXA-2026_06_09.xlsx  remessas-BARBACENA-2026_06_09.xlsx  remessas-BELO HORIZONTE-2026_06_09.xlsx  remessas-BOM DESPACHO-2026_06_09.xlsx  remessas-BRASILIA DE  MINAS-2026_06_09.xlsx  remessas-CONSELHEIRO LAFAIETE-2026_06_09.xlsx  remessas-CONTAGEM-2026_06_09.xlsx  remessas-CORONEL FABRICIANO-2026_06_09.xlsx  remessas-CURVELO-2026_06_09.xlsx  remessas-DIVINÓPOLIS-2026_06_09.xlsx  remessas-GOVERNADOR VALADARES-2026_06_09.xlsx  remessas-ITABIRA-2026_06_09.xlsx  remessas-ITAÚNA-2026_06_09.xlsx  remessas-ITUIUTABA-2026_06_09.xlsx  remessas-JUIZ DE FORA-2026_06_09.xlsx  remessas-LAVRAS-2026_06_09.xlsx  remessas-MANHUAÇU-2026_06_09.xlsx  remessas-MONTES CLAROS-2026_06_09.xlsx  remessas-MURIAÉ-2026_06_09.xlsx  remessas-OLIVEIRA-2026_06_09.xlsx  remessas-PARACATU-2026_06_09.xlsx  remessas-PASSOS-2026_06_09.xlsx  remessas-PATOS DE MINAS-2026_06_09.xlsx  remessas-PEDRO LEOPOLDO-2026_06_09.xlsx  remessas-PONTE NOVA-2026_06_09.xlsx  remessas-POUSO ALEGRE-2026_06_09.xlsx  remessas-POÇOS DE CALDAS-2026_06_09.xlsx  remessas-SALINAS-2026_06_09.xlsx  remessas-SAO JOAO DEL REI-2026_06_09.xlsx  remessas-SETE LAGOAS-2026_06_09.xlsx  remessas-TEÓFILO OTONI-2026_06_09.xlsx  remessas-UBERABA-2026_06_09.xlsx  remessas-UBERLANDIA-2026_06_09.xlsx  remessas-UBÁ-2026_06_09.xlsx  remessas-VARGINHA-2026_06_09.xlsx
script_sei_envia_monit_cronograma/: main_enviar.py  main_extrair.py  main_extrair_dl.py  main_extrair_ffe.py  main_extrair_ffe_vpb.py  txt_email.py
(+41 files in other folders)
