[project]
name = "script-sei-envia-monit-cronograma"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Amaral Bernardino",email = "gu.amaralb@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4"
pandas = "^2.3.3"
openpyxl = "^3.1.5"
webdriver-manager = "^4.0.2"
selenium = "^4.39.0"
python-dotenv = "^1.2.1"
weasyprint = "^68.1"
reportlab = "^4.4.10"
sei-automacao = { develop = true, path = "../../../sei-automacao" }
xlsxwriter = "^3.2.9"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
ruff = "^0.14.13"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = {cmd = 'poetry run ruff check'}
pre_format = {cmd = 'poetry run ruff check --fix'}
format = {cmd = 'poetry run ruff format'}
pre_run_enviar = {cmd = "poetry run task format"}
pre_run_extrair = {cmd = "poetry run task format"}
run_extrair = {cmd = "poetry run python script_sei_envia_monit_cronograma/main_extrair.py"}
run_enviar = {cmd = "poetry run python script_sei_envia_monit_cronograma/main_enviar.py"}